# katago-webui

./: .gitignore  README.md  practise.md  tts.md
backend/: .env  Cargo.toml
backend/logs/: backend.log.2025-09-14
backend/src/: main.rs
backend/src/engine/: gtp.rs  mod.rs
backend/src/review/: mod.rs  parser.rs
docs/: sgf-import-design.md
frontend/public/: index.html  review.html  train.html
frontend/public/problems/: README.md  basic.json  capture.json  connect.json  corner.json  defense.json  endgame.json  eyes.json  ko.json  ladder.json  manifest.json  net.json  reading.json
scripts/: install-service.sh  uninstall-service.sh
